CXF-8799: Unxepected URLEncode in MTOM Content-Id